--- a/libs/mysqlvim/pom.xml
+++ b/libs/mysqlvim/pom.xml
@@ -20,4 +20,17 @@
             <version>5.1.36</version>
         </dependency>
     </dependencies>
+<build>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <version>3.1</version>
+              <configuration>
+                  <source>1.8</source>
+                  <target>1.8</target>
+              </configuration>
+          </plugin>
+      </plugins>
+      </build>
 </project>
