Fix build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,5 +32,5 @@ script:
     elif [ "$LINT" = "vint" ]; then
       vint .
     elif [ "$LINT" = "vint-errors" ]; then
-      vint  .
+      vint --error .
     fi
